# ModernSqlite3

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: MSqlite.cpp  MSqlite.h  main.cpp
test/createTable/: CMakeLists.txt  createTableTest.cpp
